# sar-flood-extent-aws

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml  pr-check.yml
cdk/: README.md  app.py  cdk.json  pyproject.toml  requirements.txt
cdk/dashboards/: main.json
cdk/sar_flood_aws/: stack.py
data/: README.md
docs/: api_contract.md  deploy_manual_stage2.md  latency_baseline.md  linkedin_draft.md  usage.md
docs/figures/: architecture.mmd
lambda/: README.md
lambda/kicker/: handler.py
scripts/: e2e_test.py  invoke_sm.py  make_dashboard_image.py  smoke_test_container.py  synthetic_load.py  validate_harvey_local.py
src/: __init__.py  api.py  inference.py  sen1floods11_norm_constants.json
tests/: test_inference.py
tests/data/: harvey_crop.tif
